fix: update response logic
